# bazel-cgo

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  deps.bzl  go.mod  zmq_client.go  zmq_server.go
