load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
load("@rules_go//go:def.bzl", "go_binary")

package(default_visibility = ["//visibility:public"])

# Dependency of cppzmq
cmake(
    # Note: This exact name is required to make "cppzmq cmake target work.
    name = "zmq",
    # This uses Ninja to build under the hood, which is faster than make.
    #generate_args = ["-GNinja"],
    lib_source = "@zeromq//:all_srcs",
    out_static_libs = ["libzmq.a"],
)

go_binary(
    name = "zmq_client",
    srcs = ["zmq_client.go"],
    deps = [
        "@com_github_pebbe_zmq4//:go_default_library",
    ],
    cgo = True,
    cdeps = [
        ":zmq",
    ],
)

go_binary(
    name = "zmq_server",
    srcs = ["zmq_server.go"],
    deps = [
        "@com_github_pebbe_zmq4//:go_default_library",
    ],
    cgo = True,
    cdeps = [
        ":zmq",
    ],
)
