load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "zmq_client",
    srcs = ["zmq_client.go"],
    deps = [
        # Important note, this library is not hermetic.
        "@com_github_pebbe_zmq4//:go_default_library",
    ],
    cgo = True,
    cdeps = [
        "@libzmq//:libzmq",
    ],
)

go_binary(
    name = "zmq_server",
    srcs = ["zmq_server.go"],
    deps = [
        # Important note, this library is not hermetic.
        "@com_github_pebbe_zmq4//:go_default_library",
    ],
    cgo = True,
    cdeps = [
             "@libzmq//:libzmq",
    ],
)

