module(name = "bazel-cgo", version = "0.0.1")

###############################################################################
# Bazel dependencies

bazel_dep(name = "gazelle", version = "0.39.0")
bazel_dep(name = "libzmq", version = "4.3.5.bcr.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "rules_go", version = "0.50.1")

###############################################################################
# 3rd party dependencies not in Bazel Central Registry
non_module_deps = use_extension("deps.bzl", "non_module_dependencies")
use_repo(non_module_deps, "zeromq")  # com_github_pebbe_zmq4 depends on this

###############################################################################
# Go extensions

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.23.1")

# Go dependencies (centralized across all Go modules in this Git repo)
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of all `go.mod` files referenced by the `go.work` file have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_pebbe_zmq4",
)

###############################################################################
